apps/example-repo/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-repo
  namespace: prod
  labels:
    backstage.io/kubernetes-id: example-repo
    environment: prod
spec:
  selector:
    app: example-repo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: example-repo-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: example-repo.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: example-repo
#             port:
#               number: 80
